# tradfi-swings

./: .gitignore  README.md  notify_telegram.py  publish_notion.py  pyproject.toml
.claude/agents/: tradfi-swings-analyst.md
.claude/skills/tradfi-swings/: SKILL.md
.github/workflows/: update-calendar.yml
config/: watchlist.yaml
data-mirror/: ff_calendar_thisweek.json
docs/superpowers/plans/: 2026-04-18-price-action-layer.md
scripts/: emit_macro.py  emit_payload.py
src/: article_extract.py  confluence.py  earnings_calendar.py  econ_calendar.py  fetch.py  fibs.py  fvg.py  levels.py  liquidity.py  market_context.py  market_structure.py  momentum.py  news.py  order_blocks.py  swings.py  types.py
tests/: conftest.py  test_confluence.py  test_fetch.py  test_fibs.py  test_fvg.py  test_levels.py  test_liquidity.py  test_market_context.py  test_market_structure.py  test_momentum.py  test_order_blocks.py  test_swings.py
tests/fixtures/: ohlc_all_tfs.py
